--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -255,7 +255,7 @@ section .mbr-background-video-preview {
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  align-items: start;
+  align-items: center;
 }
 .media-container-row .media-size-item {
   width: 400px;
@@ -940,14 +940,17 @@ blockquote {
 }
 
 .row {
-  margin-left: -16px;
-  margin-right: -16px;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 .row > [class*=col] {
   padding-left: 16px;
   padding-right: 16px;
 }
 
+.ballsy {
+  padding-left:50px;
+}
 @media (min-width: 992px) {
   .container-fluid {
     padding-left: 32px;
